--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 server:
   port: 9090
+
+spring:
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+  datasource:
+    url: jdbc:mysql://localhost:3306/security-demo
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: password
+
